metacatui/src/main/webapp/js/themes/dataone/css/metacatui.css
/* ... */
    
    .download-this-package{
    	margin-left: 20px;
    }
    
    .download-this-package i{
    	margin-left: 10px;
    }
    
    #downloadPackage .dropdown-toggle {
		font-size: 20px;
		line-height: 20px;
		font-weight: 400;
	 }
    
    .btn-group.open .btn.dropdown-toggle{
    	color: #1C6E84;
      	background: rgba(22, 97, 148, 0.2);
    }  
    
    .dropdown-menu > li > a.btn{
    	background-color: #FFFFFF;
    	font-weight: 300;
    	font-size: 18px;
    	line-height: 18px;
    }
    
/* ICONS CSS
-------------------------------------------------- */
    
    i.glyphicons-icon, i.halflings-icon {
      opacity: .8;
    }

    i.glyphicons-icon.white {
      opacity: 1;
    }
   

/* TABLES 
-------------------------------------------------- */
thead tr{
	background-color: #a1b3c2;
	color: #FFF;
}
.table th{
	border-top: 0px;
}
tr.table-header{
	background-color: #1C6E84;
}
tr.table-header th{
	text-align: center;
}
tr, th, td{
	border-width: 0px;
}
table td.btn-container,
table th.btn-container{
   width: 1px; /*This will make the cell just as big as the button itself  since hte button will overflow and still be visible*/
}
table td.btn-container .btn,
table th.btn-container .btn{
	min-width: 90px;
}
.table-striped tfoot>tr>th{
	background-color:#f9f9f9;
}
  
/* THE NAVBAR
-------------------------------------------------- */
	.navbar .nav{
		width: 100%;
	}
	.navbar .nav,
	.navbar-upper,
	.navbar-lower .nav{
		transition: width 1s;
		-webkit-transition: width 1s;
	}
	.navbar-lower .input-append{
		margin-top: 5px;
		margin-bottom: 5px;
	}
	.DataCatalog .navbar .nav,
	.DataCatalog .navbar-upper .nav,
	.DataCatalog .navbar-lower .nav{
		width: 100%;
	}
	.DataCatalog .navbar{
		margin-bottom: 0px;
	}
	
	.navbar-inner{
		background: rgba(102,0,51,1);
		/*background: -moz-linear-gradient(top, rgba(102,0,51,1) 0%, rgba(77,0,39,1) 44%, rgba(51,0,26,1) 100%);
		background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(102,0,51,1)), color-stop(44%, rgba(77,0,39,1)), color-stop(100%, rgba(51,0,26,1)));
		background: -webkit-linear-gradient(top, rgba(102,0,51,1) 0%, rgba(77,0,39,1) 44%, rgba(51,0,26,1) 100%);
		background: -o-linear-gradient(top, rgba(102,0,51,1) 0%, rgba(77,0,39,1) 44%, rgba(51,0,26,1) 100%);
		background: -ms-linear-gradient(top, rgba(102,0,51,1) 0%, rgba(77,0,39,1) 44%, rgba(51,0,26,1) 100%);
		background: linear-gradient(to bottom, rgba(102,0,51,1) 0%, rgba(77,0,39,1) 44%, rgba(51,0,26,1) 100%);
		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#660033', endColorstr='#33001a', GradientType=0 );*/
		border-radius: 0px;
		border-width: 0px;
	}
	.navbar .nav > li > a {
        color: #FFF;
		text-shadow: none;
		font-size: 1.2em;
		font-weight: normal;
    }
    .navbar .nav > li > a:hover,
    .navbar .nav > li > a:focus{
    	color: rgb(0,255,255);
    }
    .navbar .nav li.dropdown.open>.dropdown-toggle, .navbar .nav li.dropdown.active>.dropdown-toggle, .navbar .nav li.dropdown.open.active>.dropdown-toggle{
    	background-color: #440029;
    	color: #FFF;
    }
	.navbar-lower{
		width: 100%;
		width: calc(100% - 40px);
		min-height: 40px;
		background-color: rgba(63, 0, 31, 1);
		padding-left: 20px;
		padding-right: 20px;
	}
	.navbar-lower .nav > li > a {
		font-size: 1em;
		font-weight: light;
	}
	.navbar .nav > .label{
		font-size: .8em;
		color: #FFF;
		font-weight: light;
		text-transform: uppercase;
		line-height: 40px;
		margin-left: 14px;
		margin-right: 14px;
	}
    .navbar-upper{
    	padding-left: 20px;
    	padding-right: 20px;
    }
    .nav li.right{
    	float: right;
    }
    .nav .logo > img{
    	height: 36px;
    }
    
    .navbar-lower > .nav > .input{
    	margin-left: 40px;
    }
    .navbar-lower .input > form > label{
	    color: rgba(203, 80, 138, 1);
    }
    .navbar-lower .input > form > input[type="text"]{
    	background-image: url(../img/subtle-bg-magenta.png);
    	background-repeat: repeat;
    	background-size: 100%;
    	background-color: transparent;
    	border: 0px;
    	color: white;
    }
	.navbar-lower .input > form > .btn {
		background-color:#91285F;
		color:#ffffff;
		text-shadow:0px 1px 0px #3f0020;
		border: 0px;
		border-radius: 0px;
	}  
    .navbar-lower .input > form > input[type="text"]::-webkit-input-placeholder{
    	color: rgba(203, 80, 138, 1);
    }
    .navbar-lower .input > form > input[type="text"]:-moz-placeholder{
    	color: rgba(203, 80, 138, 1);
    }
    .navbar-lower .input > form > input[type="text"]::-moz-placeholder{
    	color: rgba(203, 80, 138, 1);
    }
    .navbar-lower .input > form > input[type="text"]:-ms-input-placeholder{
    	color: rgba(203, 80, 138, 1);
    }
    
    /*Share Your Data button */
    #share-data-view{
    	display: none;
    }
    
    #share{
    	position: fixed;
    	top: 60px;
    	left: -160px;
    	z-index: 999;
    	width: auto;
    	margin: 0px;
    	border-radius: 0px;
    	-webkit-border-radius: 0px;
    	-moz-border-radius: 0px;
    	padding: 0px 5px;
    	line-height: 33px;
    	-webkit-box-shadow: 3px -1px 15px rgba(50, 50, 50, 0.51);
		-moz-box-shadow:    3px -1px 15px rgba(50, 50, 50, 0.51);
		box-shadow:         3px -1px 15px rgba(50, 50, 50, 0.51);
		transition: all .5s;
    }
    
    #share > i{
    	margin-left: 10px;
    	font-size: 24px;
    	color: #EEE;
    }
    
    #share:hover{
    	left: 0px;
    }
    
    .show-new-dataCatalogView{
    	cursor: pointer;
    }
	.soc-media{
		float: right;
		margin-top: 18px;
	}
	.navbar-upper > .logo {
		margin: 10px;
		max-height: 83px;
		float: left;
	}
    
    /* Depending on the headerType, these classes apply */
    
    .navbar-inner > ul{
    	margin: 0px;
    }
    
	 #Navbar form {
      margin: 0px 0px 0px 0px;
      padding: 0px 0px 0px 0px;
    }
    
    /* Logged-in view and user controls in navbar */
    #Navbar i .user {
      opacity: .6;
    }
    #SignIn {
      float: right;
    }
/* ... */

